--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coderstar</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Thumbnail with Link</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="flame">
-          <h1><span>Jai Shree Ram</span></h1>
+    <a href="https://example.com">
+        <div class="thumbnail">
+            <img src="your-image.jpg" alt="Thumbnail Image">
+            <div class="caption">Click Here</div>
         </div>
-      </div>
-    <a href="" alt="Mythrill" target="_blank">
-        <div class="card">
-          <div class="wrapper">
-            <img src="img/peakpx.jpg" class="cover-image" />
-          </div>
-         
-          <img src="img/Shri-Ram-20.png" class="character" />
-        </div>
-      </a>
+    </a>
 </body>
 </html>
