--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="https://example.com">
+    <a href="https://vishal1devops.github.io/test1/">
         <div class="thumbnail">
             <img src="your-image.jpg" alt="Thumbnail Image">
             <div class="caption">Click Here</div>
