--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="https://vishal1devops.github.io/test1/">
+    <a href="https://raw.githubusercontent.com/test1/">
         <div class="thumbnail">
-            <img src="your-image.jpg" alt="Thumbnail Image">
+            <img src="add-thumbnail.jpg" alt="Thumbnail Image">
             <div class="caption">Click Here</div>
         </div>
     </a>
