--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thumbnail with Link</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Thumbnail Example</title>
+    <style>
+        .thumbnail {
+            width: 300px; /* Adjust the width as needed */
+            height: auto; /* Maintain aspect ratio */
+        }
+    </style>
 </head>
 <body>
-    <a href="https://raw.githubusercontent.com/test1/">
-        <div class="thumbnail">
-            <img src="add-thumbnail.jpg" alt="Thumbnail Image">
-            <div class="caption">Click Here</div>
-        </div>
-    </a>
+    <div class="thumbnail-container">
+        <img class="thumbnail" src="https://raw.githubcontent.com/VISHAL1DEVOPS/test1/blob/main/add-thumbnail.jpg" alt="Thumbnail">
+    
+    </div>
 </body>
 </html>
