--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <img class="thumbnail" src="images/add-thumbnail.jpg" alt="Thumbnail">
+    <img class="thumbnail" src="add-thumbnail.jpg" alt="Thumbnail">
 </body>
 </html>
